--- a/driver/mangler/Makefile
+++ b/driver/mangler/Makefile
@@ -4,15 +4,16 @@
 TOP=../..
 include $(TOP)/mk/boilerplate.mk
 
-SCRIPT_PROG 	= ghc-asm
+PROG = ghc-asm
+all:: $(PROG).prl
+	$(RM) -f $(PROG)
+	echo '#!$(PERL)'                                >> $(PROG)
+	echo '$$TARGETPLATFORM  = "$(TARGETPLATFORM)";' >> $(PROG)
+	cat $<                                          >> $(PROG)
+	$(EXECUTABLE_FILE) $(PROG)
 
-INTERP=perl
-
-SCRIPT_SUBST_VARS := TARGETPLATFORM
-
-INSTALL_LIBEXEC_SCRIPTS += $(SCRIPT_PROG)
-
-CLEAN_FILES += $(SCRIPT_OBJS)
+INSTALL_LIBEXEC_SCRIPTS += $(PROG)
+CLEAN_FILES += $(PROG) $(PROG).prl
 
 # needed for bootstrapping with HC files
 ifeq "$(BootingFromHc)" "YES"
