--- a/utils/mkdependC/Makefile
+++ b/utils/mkdependC/Makefile
@@ -7,15 +7,15 @@ include $(TOP)/mk/boilerplate.mk
 
 boot :: all
 
-SCRIPT_PROG=mkdependC
-SCRIPT_OBJS=mkdependC.prl
-#
-# Prepend (perl) bindings for these Makefile variables
-# when creating `mkdependC' (a more flexible way of doing msub).
-#
-SCRIPT_SUBST_VARS=DEFAULT_TMPDIR CPP BUILDPLATFORM
-
-CLEAN_FILES += $(SCRIPT_PROG)
-INTERP=perl
+PROG=mkdependC
+CLEAN_FILES += $(PROG)
+all::
+	$(RM) -f $(PROG)
+	echo '#!$(PERL)'                               >> $(PROG)
+	echo '$$DEFAULT_TMPDIR = "$(DEFAULT_TMPDIR)";' >> $(PROG)
+	echo '$$CPP            = "$(CPP)";'            >> $(PROG)
+	echo '$$BUILDPLATFORM  = "$(BUILDPLATFORM)";'  >> $(PROG)
+	cat $(PROG).prl                                >> $(PROG)
+	$(EXECUTABLE_FILE) $(PROG)
 
 include $(TOP)/mk/target.mk
