--- a/driver/ghci/Makefile
+++ b/driver/ghci/Makefile
@@ -61,4 +61,8 @@ ghci.res : ghci.rc ghci.ico
 	windres -o ghci.res -i ghci.rc -O coff
 endif
 
+binary-dist:
+	$(INSTALL_DIR)           $(BIN_DIST_DIR)/driver/ghci
+	$(INSTALL_DATA) Makefile $(BIN_DIST_DIR)/driver/ghci/
+
 include $(TOP)/mk/target.mk
