--- a/driver/split/Makefile
+++ b/driver/split/Makefile
@@ -15,4 +15,9 @@ all:: $(PROG).prl
 INSTALL_LIBEXEC_SCRIPTS += $(PROG)
 CLEAN_FILES += $(PROG) $(PROG).prl
 
+binary-dist:
+	$(INSTALL_DIR)              $(BIN_DIST_DIR)/driver/split
+	$(INSTALL_DATA)    Makefile $(BIN_DIST_DIR)/driver/split/
+	$(INSTALL_PROGRAM) $(PROG)  $(BIN_DIST_DIR)/driver/split/
+
 include $(TOP)/mk/target.mk
