--- a/utils/mkdirhier/Makefile
+++ b/utils/mkdirhier/Makefile
@@ -11,4 +11,9 @@ all::
 	cat $(PROG).sh                                 >> $(PROG)
 	$(EXECUTABLE_FILE) $(PROG)
 
+binary-dist:
+	$(INSTALL_DIR)              $(BIN_DIST_DIR)/utils/mkdirhier
+	$(INSTALL_DATA)    Makefile $(BIN_DIST_DIR)/utils/mkdirhier/
+	$(INSTALL_PROGRAM) $(PROG)  $(BIN_DIST_DIR)/utils/mkdirhier/
+
 include $(TOP)/mk/target.mk
