--- a/driver/Makefile
+++ b/driver/Makefile
@@ -25,4 +25,10 @@ INSTALL_DATAS += package.conf ghc-usage.txt ghci-usage.txt
 # re-installing packages.
 CLEAN_FILES += package.conf* stamp-pkg-conf*
 
+binary-dist:
+	$(INSTALL_DIR)                   $(BIN_DIST_DIR)/driver
+	$(INSTALL_DATA) Makefile         $(BIN_DIST_DIR)/driver
+	$(INSTALL_DATA) $(INSTALL_DATAS) $(BIN_DIST_DIR)/driver
+	set -e; for d in $(SUBDIRS); do $(MAKE) -C $$d binary-dist; done
+
 include $(TOP)/mk/target.mk
