--- a/driver/mangler/Makefile
+++ b/driver/mangler/Makefile
@@ -20,4 +20,9 @@ ifeq "$(BootingFromHc)" "YES"
 boot :: all
 endif
 
+binary-dist:
+	$(INSTALL_DIR)              $(BIN_DIST_DIR)/driver/mangler
+	$(INSTALL_DATA)    Makefile $(BIN_DIST_DIR)/driver/mangler/
+	$(INSTALL_PROGRAM) $(PROG)  $(BIN_DIST_DIR)/driver/mangler/
+
 include $(TOP)/mk/target.mk
