--- a/utils/hp2ps/Makefile
+++ b/utils/hp2ps/Makefile
@@ -11,4 +11,9 @@ LIBS	     = $(LIBM)
 
 CLEAN_FILES += $(C_OBJS) $(C_PROG)
 
+binary-dist:
+	$(INSTALL_DIR)               $(BIN_DIST_DIR)/utils/hp2ps
+	$(INSTALL_DATA)    Makefile  $(BIN_DIST_DIR)/utils/hp2ps/
+	$(INSTALL_PROGRAM) $(C_PROG) $(BIN_DIST_DIR)/utils/hp2ps/
+
 include $(TOP)/mk/target.mk
