--- a/utils/unlit/Makefile
+++ b/utils/unlit/Makefile
@@ -13,4 +13,9 @@ boot :: all
 #
 INSTALL_LIBEXECS += $(C_PROG)
 
+binary-dist:
+	$(INSTALL_DIR)               $(BIN_DIST_DIR)/utils/unlit
+	$(INSTALL_DATA)    Makefile  $(BIN_DIST_DIR)/utils/unlit/
+	$(INSTALL_PROGRAM) $(C_PROG) $(BIN_DIST_DIR)/utils/unlit/
+
 include $(TOP)/mk/target.mk
